gccida/g0/subreg_regno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/subreg_regno/src/rtlanal.c:3522:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)subreg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/subreg_regno/src/rtlanal.c:3524:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/subreg_regno/src/obj/rtlanal.o] Error 1
